test/compile_errors/err_issue172_tuple_pattern_scalar_subject.w
//! expect-error: tuple pattern requires tuple subject

fn main:
    let rc: i32 = -994
    let _ = match rc:
        (-994,) => 1
        _ => 0
